@startuml Comedor infantil

class Niño{
    -numeroMatricula : Int
    -nombre : String
    -apellido : String
    -fechadeNacimiento : Date
    -fechadeRetiro : Date
}

class PersonaAutorizada{
    -dni : String
   -nombre : String
   -apellido : String
   -direccion : String
   -telefono : String
   -relacion : String
}

class PersonaPago{
   -cuentaCorriente : String
}

class Alergia{
    -ingredientes : Ingrediente
}
class Menu{
    -numeroMenu : Int
    -platos : List<plato>
}

class Plato{
    -nombre : String
    - ingredientes : List<Ingrediente>
}

class Ingrediente{
    -nombre : String
}

class AsistenciaComida {
    - fecha: Date
    - menuConsumido: Menu
}

Niño "1" -- "1..*" PersonaAutorizada : "Tiene"
Niño "1" -- "0..*" AsistenciaComida : "Registra"
Niño "1" -- "1" PersonaPago : "Pagado por"
Niño "1" -- "0..*" Alergia : "Tiene"
AsistenciaComida "0..*" -- "1" Menu : "Consume"
Menu "1" -- "0..*" Plato : "Contiene"
Plato "1" -- "0..*" Ingrediente : "Usa"
Alergia "1" -- "0..*" Ingrediente : "Involucra"
PersonaAutorizada <|-- PersonaPago


@enduml